# CloudCompare

./: .gitignore  CSV_EXPORT_GUIDE.md  PLAN.md
plugins/core/Standard/qJointDetect/: CMakeLists.txt  info.json
scripts/: extract_training_data.py  train_joint_model.py
training_data/: README.md
